--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -29,9 +29,9 @@
       <div class="func-box">
         <div class="header">操作</div>
         <div class="article">
-          <button id="addStBt" class="layui-btn"><i class="layui-icon layui-icon-add-circle"></i>添加学生信息</button>
-          <button id="deleteStBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除学生信息</button>
-          <button id="changeStBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改学生信息</button>
+          <button id="addBt" class="layui-btn"><i class="layui-icon layui-icon-add-circle"></i>添加学生信息</button>
+          <button id="deleteBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除学生信息</button>
+          <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改学生信息</button>
           <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找学生信息</button>
           <button id="uploadStBt" class="layui-btn"><i class="layui-icon layui-icon-upload-drag"></i>导入学生信息</button>
           <button class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载学生信息导入模板</button>
@@ -84,10 +84,10 @@
         </div>
         <div class="btn-box"><button class="layui-btn" onclick="searchSt()">确定</button></button></div>
       </div>
-      <div class="add-st-box layui-anim layui-anim-scale" id="addStBox">
+      <div class="add-st-box layui-anim layui-anim-scale" id="addBox">
         <div class="header">
           <div>新增学生</div>
-          <div onclick="asb.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+          <div onclick="abox.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
         </div>
         <div class="form-box layui-form" lay-filter="addStForm">
           <div class="layui-form-item input-box">
@@ -130,10 +130,10 @@
         </div>
         <div class="btn-box"><button class="layui-btn" onclick="addSt()">确定</button></button></div>
       </div>
-      <div class="change-st-box layui-anim layui-anim-scale" id="changeStBox">
+      <div class="change-st-box layui-anim layui-anim-scale" id="changeBox">
         <div class="header">
           <div>修改学生信息</div>
-          <div onclick="document.getElementById('changeStBox').style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+          <div onclick="document.getElementById('changeBox').style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
         </div>
         <div class="form-box layui-form" lay-filter="changeStForm">
           <div class="layui-form-item input-box">
@@ -317,16 +317,16 @@
       });
 
       // 删除学生信息
-      let deleteStBt = document.getElementById("deleteStBt");
+      let deleteBt = document.getElementById("deleteBt");
       
-      deleteStBt.addEventListener("click", function () {
+      deleteBt.addEventListener("click", function () {
         let checkStatus = table.checkStatus('idTest');
 
         if(checkStatus.data.length < 1) {
           layer.msg("请至少选择一条有效学生信息");
           return;
         }
-        
+
         layer.open({
           type: 1,
           content: '确定删除选中的 ' + checkStatus.data.length + '条信息吗？',
@@ -345,8 +345,8 @@
       })
 
       // 修改学生信息
-      let changeStBt = document.getElementById("changeStBt");
-      changeStBt.addEventListener("click", function () {
+      let changeBt = document.getElementById("changeBt");
+      changeBt.addEventListener("click", function () {
         // 选中学生有效性判断
         let checkStatus = table.checkStatus('idTest');
         if (checkStatus.data.length > 1) {
@@ -359,7 +359,7 @@
         }
 
         // 展示修改表单，并把相关数据填入表单
-        let csb = document.getElementById("changeStBox");
+        let cbox = document.getElementById("changeBox");
         let changeInfo = {
           id: checkStatus.data[0].id,
           name: checkStatus.data[0].name,
@@ -370,7 +370,7 @@
           class: checkStatus.data[0].class
         };
 
-        csb.style.display = 'block';
+        cbox.style.display = 'block';
         form.val("changeStForm", changeInfo);
       })
     });
@@ -444,8 +444,8 @@
     }
     // --------------------部分独立方法（结束）-----------------------
   </script>
-  <script src="../../layuiadmin/modules/searchStudent.js"></script>
-  <script src="../../layuiadmin/modules/addSt.js"></script>
+  <script src="../../layuiadmin/modules/search.js"></script>
+  <script src="../../layuiadmin/modules/add.js"></script>
   <script src="../../layuiadmin/modules/upload.js"></script>
 </body>
 
