--- a/src/views/class/manage.html
+++ b/src/views/class/manage.html
@@ -125,6 +125,7 @@
         data: demoTree, // 使用data加载
         checkbar: true,
         checkbarType: "all",
+        checkbarLoad: "leaf",
       });
       // 绑定节点点击
       dtree.on("node('demoTree')", function (obj) {
