--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -191,7 +191,7 @@
       <div class="table-box">
         <div class="header">学生信息</div>
         <div class="article">
-          <table id="students" lay-data="{id: 'idTest'}" lay-filter="test"></table>
+          <table id="students" lay-filter="test"></table>
         </div>
       </div>
     </div>
