--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -90,7 +90,7 @@
         </div>
         <div class="btn-box"><button class="layui-btn" onclick="searchSt()">确定</button></button></div>
       </div>
-      <div class="add-st-box layui-anim layui-anim-scale" id="addBox">
+      <div class="add-box layui-anim layui-anim-scale" id="addBox">
         <div class="header">
           <div>新增学生</div>
           <div onclick="abox.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
@@ -136,7 +136,7 @@
         </div>
         <div class="btn-box"><button class="layui-btn" onclick="addSt()">确定</button></button></div>
       </div>
-      <div class="change-st-box layui-anim layui-anim-scale" id="changeBox">
+      <div class="change-box layui-anim layui-anim-scale" id="changeBox">
         <div class="header">
           <div>修改学生信息</div>
           <div onclick="document.getElementById('changeBox').style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
