finishi add of paymentMange

--- a/src/views/class/manage.html
+++ b/src/views/class/manage.html
@@ -105,7 +105,7 @@
         <div class="btn-box"><button class="layui-btn" onclick="changeCl()">确定</button></button></div>
       </div>
       <div class="table-box">
-        <div class="header">缴费模板</div>
+        <div class="header">可用缴费模板</div>
         <div class="article">
           <table id="payment-template" lay-filter="test"></table>
         </div>
